@@ -1,4 +1,5 @@
 - Updated TypeUtility.IsAnonymousType to detect anonymous types when running on Mono
+- Removed System.Web reference for .NET 4.0 version because System.Web.HttpUtility can be replaced by System.Net.WebUtility
 
 v1.6.0 - 2011-06-25
 - Added SymbolSource support to NuGet package generation script
